# data_collection

./: .gitignore  AGENTS.md  CLAUDE.md  README.MD  README.md  find_elipsode.py  orginize_bag.py  pyproject.toml  pyrightconfig.json  reset_digits.sh  test.py
archive/moveit_pkg/: package.xml  setup.cfg  setup.py
archive/my_moveit_pkg/: package.xml  setup.cfg  setup.py
bag_data_collections/19_10_13_21/: metadata.yaml
bag_data_collections/19_10_13_23/: metadata.yaml
bag_data_collections/19_10_13_24/: metadata.yaml
bag_data_collections/19_10_13_26/: metadata.yaml
bag_data_collections/19_10_13_28/: metadata.yaml
bag_data_collections/19_10_13_32/: metadata.yaml
bag_data_collections/19_10_13_33/: metadata.yaml
bag_data_collections/19_10_13_34/: metadata.yaml
bag_data_collections/19_10_13_36/: metadata.yaml
bag_data_collections/19_10_13_41/: metadata.yaml
bag_data_collections/19_10_13_44/: metadata.yaml
bag_data_collections/19_10_13_50/: metadata.yaml
bag_data_collections/19_10_13_52/: metadata.yaml
bag_data_collections/19_10_14_05/: metadata.yaml
bag_data_collections/19_10_14_07/: metadata.yaml
bag_data_collections/19_10_14_46/: metadata.yaml
bag_data_collections/19_10_14_49/: metadata.yaml
bag_data_collections/19_10_14_51/: metadata.yaml
bag_data_collections/19_10_14_53/: metadata.yaml
bag_data_collections/19_10_14_59/: metadata.yaml
bag_data_collections/19_10_15_02/: metadata.yaml
bag_data_collections/19_10_15_04/: metadata.yaml
bag_data_collections/19_10_15_05/: metadata.yaml
bag_data_collections/19_10_15_08/: metadata.yaml
bag_data_collections/19_10_15_10/: metadata.yaml
bag_data_collections/19_10_15_11/: metadata.yaml
bag_data_collections/19_10_15_12/: metadata.yaml
bag_data_collections/19_10_15_15/: metadata.yaml
bag_data_collections/19_10_16_19/: metadata.yaml
bag_data_collections/19_10_16_21/: metadata.yaml
bag_data_collections/19_10_16_22/: metadata.yaml
bag_data_collections/19_10_16_24/: metadata.yaml
bag_data_collections/19_10_16_26/: metadata.yaml
bag_data_collections/19_10_16_27/: metadata.yaml
bag_data_collections/19_10_16_29/: metadata.yaml
bag_data_collections/19_10_16_41/: metadata.yaml
bag_data_collections/19_10_16_43/: metadata.yaml
bag_data_collections/19_10_16_44/: metadata.yaml
bag_data_collections/19_10_16_46/: metadata.yaml
bag_data_collections/19_10_16_49/: metadata.yaml
bag_data_collections/19_10_17_04/: metadata.yaml
bag_data_collections/19_10_17_06/: metadata.yaml
bag_data_collections/19_10_17_07/: metadata.yaml
bag_data_collections/19_10_17_08/: metadata.yaml
bag_data_collections/19_10_17_10/: metadata.yaml
bag_data_collections/19_10_17_11/: metadata.yaml
bag_data_collections/19_10_17_12/: metadata.yaml
bag_data_collections/19_10_17_14/: metadata.yaml
bag_data_collections/19_10_17_16/: metadata.yaml
bag_data_collections/19_10_17_17/: metadata.yaml
bag_data_collections/27_10_12_18/: metadata.yaml
bag_data_collections/27_10_12_20/: metadata.yaml
bag_data_collections/27_10_12_21/: metadata.yaml
bag_data_collections/27_10_12_24/: metadata.yaml
bag_data_collections/27_10_12_25/: metadata.yaml
bag_data_collections/27_10_12_27/: metadata.yaml
bag_data_collections/27_10_12_28/: metadata.yaml
bag_data_collections/27_10_12_33/: metadata.yaml
bag_data_collections/27_10_12_34/: metadata.yaml
bag_data_collections/27_10_12_36/: metadata.yaml
bag_data_collections/27_10_12_37/: metadata.yaml
bag_data_collections/27_10_12_39/: metadata.yaml
bag_data_collections/27_10_12_40/: metadata.yaml
bag_data_collections/27_10_12_41/: metadata.yaml
bag_data_collections/27_10_12_43/: metadata.yaml
bag_data_collections/27_10_12_44/: metadata.yaml
bag_data_collections/27_10_12_48/: metadata.yaml
bag_data_collections/27_10_12_49/: metadata.yaml
calib_bag/: metadata.yaml
src/my_code/natnet_pub/: package.xml
src/my_code/natnet_pub/natnet_client/: MoCapData.py  NatNetClient.py
src/my_code/natnet_pub/natnet_pub/: natnet_pub_node.py
src/my_code/njc_ros/: README.md  package.xml  setup.cfg  setup.py
src/my_code/njc_ros/config/: njc_params.yaml
src/my_code/njc_ros/launch/: njc_controller.launch.py  njc_full_system.launch.py
src/my_code/njc_ros/njc_ros/: conversions.py  dlo_spline_node.py  njc_controller_node.py
src/my_code/robotiq_rviz_plugin/: CMakeLists.txt  package.xml
src/my_code/robotiq_rviz_plugin/include/robotiq_rviz_plugin/: robotiq_panel.hpp
src/my_code/robotiq_rviz_plugin/launch/: robotiq_rviz.launch.py
src/my_code/robotiq_rviz_plugin/plugins/: plugin_description.xml
src/my_code/robotiq_rviz_plugin/src/: robotiq_gripper_node.py  robotiq_panel.cpp
test_bag/: metadata.yaml
thoughts/: NJC_ROS_IMPLEMENTATION.md  WORKFLOW.md
(+277 files in other folders)
