[project]
name = "data-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catkin-pkg>=1.1.0",
    "digit-interface>=0.2.1",
    "empy>=4.2",
    "filelock>=3.19.1",
    "lark>=1.2.2",
    "minimalmodbus>=2.1.1",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "pyrobotiqgripper>=1.0.1",
    "pyyaml>=6.0.2",
    "scipy>=1.15.3",
    "setuptools>=80.9.0",
]
